--- a/index.css
+++ b/index.css
@@ -301,7 +301,8 @@ margin-top: 2px;
 .profile{
 
     margin-top: 8vh;
-	height: 30vh;
+	height: 47vmin;
+	width:47vmin;
 flex-direction: row;
 display: flex;
 }
